[package]
name = "jnat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.21.1"

[[test]]
name = "integration"
path = "integration/main.rs"
harness = false

[dev-dependencies]
inventory = "0.3.11"
log = "0.4.19"
pretty_env_logger = "0.5.0"
