[package]
name = "jnat"
version = "0.10.1"
edition = "2021"
license = "MIT"
description = "A wrapper around the jni crate"
repository = "https://github.com/shreyasm-dev/jnat/"
readme = "README.md"
categories = ["api-bindings"]
documentation = "https://docs.rs/jnat/"

[dependencies]
jni = "0.21.1"
jnat-macros = { version = "0.2.0", optional = true, path = "jnat-macros" }

[[test]]
name = "integration"
path = "integration/main.rs"
harness = false

[dev-dependencies]
inventory = "0.3.11"
log = "0.4.19"
pretty_env_logger = "0.5.0"

[features]
default = ["jni", "jnat-macros"]
jni = []
