[package]
name = "jnat-macros"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Companion crate for jnat"
repository = "https://github.com/shreyasm-dev/jnat/"

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.32"
syn = { version = "2.0.27", features = ["full"] }

[lib]
proc-macro = true
